@@ -1,0 +1,122 @@
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+
+    <string name="app_name">Simple Explorer</string>
+    <string name="advancedsettings">Детайлни настройки</string>
+    <string name="cancel">Отмена</string>
+    <string name="cannotbeundoneareyousureyouwanttodelete">"Това действие е необратимо!"</string>
+    <string name="cantopenfile">Файлът не може да бъде отворен</string>
+    <string name="cantreadfolder">Папката не се вижда поради ограничени разрешения</string>
+    <string name="copiedtoclipboard">Копирано в паметта.</string>
+    <string name="copy">Копирай</string>
+    <string name="copyfail">Копирането е неуспешно!</string>
+    <string name="copying">Копиране</string>
+    <string name="copysuccsess">Успешно копирано.</string>
+    <string name="create">Създай</string>
+    <string name="created">" Създадено."</string>
+    <string name="createmsg">Поставете точка пред името, за да създадете скрита папка.</string>
+    <string name="createnewfolder">Създай нова папка</string>
+    <string name="defaultdir">Папка по подразбиране</string>
+    <string name="delete">Изтрий</string>
+    <string name="deletesuccess">Успешно изтриване</string>
+    <string name="deleting">Изтриване</string>
+    <string name="desc">низх.</string>
+    <string name="detailed">Подробно</string>
+    <string name="details">Детайли</string>
+    <string name="dir_info">Информация за папката</string>
+    <string name="drawer_open">Отвори навигационния панел</string>
+    <string name="drawer_close">Затвори навигационния панел</string>
+    <string name="empty">Празно</string>
+    <string name="enter_name">Въведи име</string>
+    <string name="error">Грешка</string>
+    <string name="exit">Изход</string>
+    <string name="extractto">Разархивирай във</string>
+    <string name="filecreated">Файлът беше създаден.</string>
+    <string name="fileexists">Файлът вече съществува.</string>
+    <string name="files">" Файлове"</string>
+    <string name="filewasrenamed">Файлът беше преименуван.</string>
+    <string name="hiddenfiles">Скрити файлове</string>
+    <string name="itcouldntbefound">Не беше намерено.</string>
+    <string name="LastModified">Последно модифициран:</string>
+    <string name="md5">MD5:</string>
+    <string name="move">Премести</string>
+    <string name="movefail">Преместването неуспешно.</string>
+    <string name="movesuccsess">Преместването успешно.</string>
+    <string name="moving">Преместване</string>
+    <string name="multizip">Zip</string>
+    <string name="newfile">Нов файл</string>
+    <string name="newfolderwasnotcreated">Нова папка не беше създадена.</string>
+    <string name="ok">OK</string>
+    <string name="options">Опции</string>
+    <string name="packing">Компресиране</string>
+    <string name="paste">Постави</string>
+    <string name="pressbackagaintoquit">натиснете "НАЗАД", за да излезете.</string>
+    <string name="rename">Преименувай</string>
+    <string name="sdcardnotfound">Не е намерена SD карта!</string>
+    <string name="search">Търсене</string>
+    <string name="searchtext">Търсене</string>
+    <string name="selectall">избери всички</string>
+    <string name="settings">Настройки</string>
+    <string name="share">Сподели</string>
+    <string name="shortcut">Създай пряк път</string>
+    <string name="shortcutcreated">Създаден пряк път.</string>
+    <string name="showpreview">Умален преглед</string>
+    <string name="simple">Опростен</string>
+    <string name="size">Използвани:</string>
+    <string name="sort">Подреди</string>
+    <string name="uisettings">Виж настройките</string>
+    <string name="unselectall">Премахни избора на всички</string>
+    <string name="unzipping">разархивиране</string>
+    <string name="viewmode">Изглед</string>
+    <string name="xdaforum">XDA форум</string>
+    <string name="zipping">Компресиране</string>
+
+    <!-- sort list type -->
+    <string name="sort_name">Име</string>
+    <string name="sort_size">Размер</string>
+    <string name="sort_type">Тип</string>
+    <string name="sort_date">Дата</string>
+
+    <!-- theme -->
+    <string name="theme">Тема</string>
+    <string name="light">Светла</string>
+    <string name="dark">Тъмна</string>
+
+    <!-- permissions -->
+    <string name="permissions">Разрешения</string>
+    <string name="owner">Собственик:</string>
+    <string name="group">Група:</string>
+    <string name="others">Други:</string>
+    <string name="read">Четене</string>
+    <string name="write">Писане</string>
+    <string name="execute">Изпълнение</string>
+    <string name="permissionschanged">Разрешенията променени</string>
+
+    <!-- actionmode -->
+    <string name="_files">\u0020файл(ове)</string>
+    <string name="_selected">\u0020избрани</string>
+
+    <!-- directory info dialog -->
+    <string name="location">Местоположение:</string>
+    <string name="total">Общо пространство:</string>
+    <string name="free">Свободно пространство:</string>
+    <string name="available">Достъпно пространство:</string>
+    <string name="block_size">Размер на блока:</string>
+    <string name="used">използвани:</string>
+
+    <!-- bookmarks -->
+    <string name="bookmark">Отметки</string>
+    <string name="bookmarkadded">Отметката е добавена.</string>
+    <string name="bookmarkexist">Отметката вече съществува!</string>
+    <string name="createbookmark">Създай отметка</string>
+
+    <!-- overwrite dialog -->
+    <string name="overwrite_title">Файлът вече съществува</string>
+    <string name="overwrite_source">Изходен</string>
+    <string name="overwrite_destination">Краен</string>
+    <string name="overwrite_skip">Пропусни</string>
+    <string name="overwrite_skip_all">Пропусни всички</string>
+    <string name="overwrite_replace">Замести</string>
+    <string name="overwrite_replace_all">Замести всички</string>
+
+</resources>
